--- a/app.json
+++ b/app.json
@@ -1,9 +1,9 @@
 {
-"name": "Queen-Alexa",
+"name": "ryo-bot",
   "description": "Lightweight WhatsApp Bot",
   "repository": "https://github.com/HYPER-MOD/Queen-Alexa",
   "logo": "https://www.linkpicture.com/q/HYPER-MOD-LOGO.jpg",
-  "keywords": ["bot", "whatsapp", "whatsapp-bot"],
+  "keywords": ["بوت", "واتساب", "واتساب بوت"],
 
     "buildpacks": [
 
