--- a/settings.json
+++ b/settings.json
@@ -1,20 +1,17 @@
 {
-	"prefix": ".",
+	"prefix": "#",
 	"lolkey": "registrasi ke webnya",
-	"ownerNumber": "94767043432",
-	"ownerNumberr": "+94767043432",
-	"botnumber": "94767043432",
-	"cr": "Queen Alexa",
+	"ownerNumber": "966530552235",
+	"ownerNumberr": "+966530552235",
+	"botnumber": "994406103512",
+	"cr": "dabi",
 	"yt":"https://youtube.com/",
 	"grub":"https://chat.whatsapp.com/",
-	"wa": "wa.me/+94767043432",
-	"donate": "94767043432",
-	"ig": "https://instagram.com/HYPER_MOD",
-	"gt": "https://github.com/HYPER-MOD",
-	"ownername": "© HYPER-MOD",
-	"botname":"「 Queen Alexa 」",
+	"wa": "wa.me/+966530552235",
+	"ownername": "© dabi",
+	"botname":"「 ryo bot 」",
 	"img":"https://k.top4top.io/p_2001zgi471.jpg",
 	"thumb":"thumbnail.jpg",
 	"fakethumb":"fake.jpg",
-	"fake": " 「 queen Alexa 」\n© HYPER-MOD"
+	"fake": " 「 ryo-dabi 」\n© ryo-bot"
 }
